<resources>
    <string name="app_name">Crispetes</string>
    <string name="search">Buscar</string>
    <string name="noresults">No se han encontrado resultados</string>
    <string name="originalTitle">Título original</string>
    <string name="genres">Géneros</string>
    <string name="scoreValue">%1$.2f (%2$d votos)</string>
    <string name="score">Valoración</string>
    <string name="productionCompany">Productora</string>
    <string name="cast">Reparto</string>
    <string name="crew">Equipo técnico</string>
    <string name="poster">Poster</string>
    <string name="backdrop">Fondo</string>
    <string name="overview">Resumen</string>
    <string name="country">País</string>
    <string name="runtime">Duración</string>
    <string name="release">Estreno</string>
    <string name="n_minutes">%d minutos</string>
    <string name="videos">Videos</string>
    <string name="search_a_movie">Busca una película</string>
    <string name="title_movie_search">Buscar</string>
    <string name="title_movie_info">Película</string>
    <string name="movie_saved">Añadida a la lista de películas pendientes</string>
    <string name="movie_watched">Movida a la lista de películas vistas</string>
    <string name="movie_deleted">Se ha eliminado la película</string>
    <string name="pending">Pendientes</string>
    <string name="watched">Vistas</string>
    <string name="tab_datasheet">Ficha</string>
    <string name="tab_cast">Reparto</string>
    <string name="tab_videos">Videos</string>
    <string name="nosources">No se ha activado ningún plugin de videos</string>
    <string name="addsource">Añadir plugin</string>
    <string name="sourcesinfo">Más información sobre los plugins de videos en www.google.es</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="subtitles">Subtítulos</string>
    <string name="quality">Calidad</string>
    <string name="sources">Plugins de video</string>
    <string name="about">Acerca de</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    <string name="enter_url">Introduce la URL</string>
    <string name="about_content">Esta aplicación android ha sido desarrollada por Txema Martinez. Puedes contactarme en bcnbeerfestapp@gmail.com</string>
    <string name="invalid_url">URL inválida</string>
    <string name="unreachable_plugin">No fue posible conectar con el plugin</string>
</resources>
