<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:adjustViewBounds="true"
            android:maxWidth="150dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_placeholder"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/poster"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            >

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release"
                    android:textStyle="bold"
                    android:labelFor="@+id/txtRelease"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"
                    />

                <TextView
                    android:id="@+id/txtRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textStyle="bold"
                    android:labelFor="@+id/txtRuntime"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"
                    />

                <TextView
                    android:id="@+id/txtRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textStyle="bold"
                    android:labelFor="@+id/txtScoreValue"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"
                    />

                <TextView
                    android:id="@+id/txtScoreValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    />

            </LinearLayout>

        </LinearLayout>

     </LinearLayout>

    <TextView
        android:id="@+id/txtTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textStyle="bold"
                android:labelFor="@+id/txtOverview"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/txtOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                />

    </LinearLayout>

    <TextView
        android:id="@+id/txtHomepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:textStyle="bold"
            android:labelFor="@+id/txtGenres"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:id="@+id/txtGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/originalTitle"
            android:textStyle="bold"
            android:labelFor="@+id/txtOriginalTitle"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:id="@+id/txtOriginalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productionCompany"
            android:textStyle="bold"
            android:labelFor="@+id/txtProductionCompany"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:id="@+id/txtProductionCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textStyle="bold"
            android:labelFor="@+id/txtProductionCountry"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:id="@+id/txtProductionCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgBackdrop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="250dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_placeholder"
        android:contentDescription="@string/backdrop"
        android:layout_marginTop="10dp"
        />

</LinearLayout>

</ScrollView>
