<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include layout="@layout/content_toolbar" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgPoster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:adjustViewBounds="true"
                        android:maxWidth="150dp"
                        android:maxHeight="250dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_placeholder"
                        android:layout_marginRight="5dp"
                        />

                    <ImageView
                        android:id="@+id/imgBackdrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:adjustViewBounds="true"
                        android:maxWidth="150dp"
                        android:maxHeight="250dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_placeholder"
                        />

                 </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/txtRelease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:layout_marginLeft="10px"
                        />

                    <TextView
                        android:id="@+id/txtStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtTagline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    />

                <TextView
                    android:id="@+id/txtOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    />

                <TextView
                    android:id="@+id/txtHomepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genres"
                        android:textStyle="bold"
                        android:labelFor="@+id/txtGenres"
                        android:textSize="14dp"
                        android:layout_marginRight="5dp"
                        />

                    <TextView
                        android:id="@+id/txtGenres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/originalTitle"
                        android:textStyle="bold"
                        android:labelFor="@+id/txtOriginalTitle"
                        android:textSize="14dp"
                        android:layout_marginRight="5dp"
                        />

                    <TextView
                        android:id="@+id/txtOriginalTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score"
                        android:textStyle="bold"
                        android:labelFor="@+id/txtScoreValue"
                        android:textSize="14dp"
                        android:layout_marginRight="5dp"
                        />

                    <TextView
                        android:id="@+id/txtScoreValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/productionCompany"
                        android:textStyle="bold"
                        android:labelFor="@id/txtStatus"
                        android:textSize="14dp"
                        android:layout_marginRight="5dp"
                        />

                    <TextView
                        android:id="@+id/txtProductionCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textStyle="bold"
                        android:labelFor="@+id/txtDirector"
                        android:textSize="14dp"
                        android:layout_marginRight="5dp"
                        />

                    <TextView
                        android:id="@+id/txtDirector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cast"
                    android:textStyle="bold"
                    android:labelFor="@+id/lstCast"
                    android:textSize="14dp"
                    />

                <ListView android:id="@+id/lstCast" android:layout_width="fill_parent" android:layout_height="300dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
